Fixed text wrapping issue; Updated register route & small changes to modals

--- a/client/src/components/Fireteam/Fireteam.css
+++ b/client/src/components/Fireteam/Fireteam.css
@@ -75,6 +75,7 @@
     font-weight: 320;
     text-align: center;
     margin-bottom: 5%;
+    overflow-wrap: break-word;
 }
 
 .right-col-fireteam-member-list {
@@ -108,6 +109,7 @@
     margin: 0;
     font-size: 16px;
     margin: 0% 0% 3% 0%;
+    overflow-wrap: break-word;
 }
 
 .fa {
@@ -116,6 +118,7 @@
 }
 
 .fireteam-leader {
+    overflow-wrap: break-word;
     font-weight: 700;
 }
 
